--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "logo_cube",
+  "name": "saberls.github.io",
   "version": "1.0.0",
   "description": "cube with social media logos",
   "main": "index.html",
